personal/src/components/Experience/card.scss
@import './../../Styles/variables.scss';

.card{
    width: 26rem;   
}
.card:hover{
    box-shadow: 5px 10px 20px 1px rgba(0, 0, 0, 0.253)!important;
    
}

.card-body{
    padding: 3rem 0 !important;
}

.card-text{
    font-family: $Poppins!important;
    padding: 0.4rem 1.9rem;
}

.container-fluid{
    padding-top: 6rem;
    padding-bottom: 6rem;
}
.container-fluid.row{
    padding-top:6rem;
}

.overflow{
    overflow: hidden;
}

.card-img-top:hover{
    transform: scale(1.1);
    transition: transform 0.5s ease;
}

